# humanoid-vision-system

./: Dockerfile  PROJECT.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
configs/: base.yaml  inference.yaml  model_registry.yaml  robot_config.yaml  training.yaml
docker/: Dockerfile.inference  Dockerfile.train  build.sh  docker-compose.inference.yml  docker-compose.train.yml  entrypoint.sh  healthcheck.py
kubernetes/: configmap.yaml  deployment.yaml  gpu-scheduler.yaml  hpa.yaml  secrets.yaml  service.yaml
notebooks/: 01_data_exploration.ipynb  02_model_analysis.ipynb  03_training_analysis.ipynb  04_inference_demo.ipynb  05_deployment_test.ipynb
scripts/: benchmark.py  deploy.py  evaluate.py  export_model.py  inference.py  train.py
src/config/: __init__.py  base_config.py  inference_config.py  model_config.py  training.yaml  training_config.py
src/data/: __init__.py  coco.py  dataloader.py  dataset.py  transforms.py
src/deployment/: __init__.py  api_server.py  grpc_server.py  health_check.py  model_server.py
src/inference/: __init__.py  engine.py  integration_demo.py  postprocessing.py  preprocessing.py  robot_interface.py  visualizer.py
src/models/: __init__.py  feature_fusion.py  hybrid_vision.py  manifold_layers.py  rag_module.py  vision_backbone.py  vit_encoder_decoder.py  yolo_head.py
src/tests/: __init__.py  test_data.py  test_deployment.py  test_inference.py  test_models.py  test_training.py
src/training/: __init__.py  loss_functions.py  mhc_trainer.py  optimizer.py  scheduler.py  stability_monitor.py
src/utils/: __init__.py  logging.py  manifold_ops.py  metrics.py  profiler.py  sinkhorn.py
