[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humanoid-vision-system"
version = "0.1.0"
description = "Production-grade hybrid vision system for humanoid robots with manifold-constrained hyper-connections"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Humanoid Vision Team", email = "contact@humanoid-vision.com"}
]
maintainers = [
    {name = "AI Robotics Team", email = "ai-robotics@humanoid-vision.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA :: 11.8",
    "Environment :: GPU :: NVIDIA CUDA :: 12.0",
    "Framework :: FastAPI",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pylint>=2.17.0",
    "pre-commit>=3.3.0",
    "jupyter>=1.0.0",
]
training = [
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
    "albumentations>=1.3.0",
]
deployment = [
    "grpcio>=1.57.0",
    "prometheus-client>=0.17.0",
    "docker>=6.1.0",
    "kubernetes>=26.0.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/humanoid-vision-system"
Documentation = "https://github.com/your-org/humanoid-vision-system/docs"
Repository = "https://github.com/your-org/humanoid-vision-system"
Issues = "https://github.com/your-org/humanoid-vision-system/issues"
Changelog = "https://github.com/your-org/humanoid-vision-system/releases"

[project.scripts]
vision-train = "scripts.train:main"
vision-infer = "scripts.inference:main"
vision-api = "src.deployment.api_server:main"
vision-health = "scripts.health_check:main"

[tool.setuptools]
packages = ["humanoid_vision"]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["humanoid_vision"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = ["numpy.typing.mypy_plugin"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests",
    "gpu: requires GPU",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/tests/*",
    "*/__pycache__/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[metadata]
name = "humanoid-vision-system"
version = "0.1.0"
summary = "Hybrid vision system for humanoid robots"
description-file = "README.md"
home-page = "https://github.com/your-org/humanoid-vision-system"
author = "Humanoid Vision Team"
author-email = "contact@humanoid-vision.com"
license = "Apache-2.0"
platform = "any"
keywords = ["vision", "robotics", "deep-learning", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]